[package]
name = "maple"
version = "0.1.0"
edition = "2021"
description = "A decentralized multi-agent protocol learning environment"

[workspace]
resolver = "2"  # Use stable dependency resolver
members = [
    "agents",
    "api",
    "cli",
    "config",
    "core",
    "core/llm",
    "core/maple",
    "mall",
    "mall/mpy",
    "map",
    "mrs",
    "runtime",
    "sdk",
    "storage/mapledb",
    "storage/postgresql",
    "storage/vectordb",
    "ual",
    "utils",
]
exclude = []  # Add if needed for external crates

[workspace.package]
version = "0.1.0"
edition = "2021"  # Stable edition as of 2025
authors = ["Finalverse Inc. <maple@finalverse.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/finalverse/mapleai.git"
homepage = "https://mapleai.org"

[workspace.dependencies]
# Internal crate dependencies.
ual = { path = "ual" }
map = { path = "map" }
agents = { path = "agents" }
mapledb = { path = "storage/mapledb"}

# External crate dependencies.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
# libp2p = { version = "0.53.2", features = ["floodsub", "noise", "yamux", "tcp", "tokio"] }
libp2p = { version = "0.53.2", features = ["noise", "yamux", "floodsub", "tcp", "tokio"] }
# yamux = "0.4"
futures = { version = "0.3" }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
