[package]
name = "agent"
description = "Maple AI Agent implementations for task execution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
ual = { workspace = true }
async-trait = "0.1"  # Stable version for async traits

mapledb = { workspace = true }
