[package]
name = "maple-agents"
version = "0.1.0"
edition = "2021"
description = "Agent implementations for the MAPLE ecosystem"
authors = ["Finalverse Inc. <maple@finalverse.com>"]
license = "© 2025 Finalverse Inc. All rights reserved."
repository = "https://github.com/finalverse/mapleai.git"
homepage = "https://mapleai.org"

[dependencies]
maple-ual = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.0", features = ["v4"] } # For DID generation
bincode = "1.3" # For binary serialization
tokio = { workspace = true, features = ["fs"] } # For file operations