[package]
name = "maple-api"
version = "0.1.0"
edition = "2021"
description = "REST and gRPC API for the MAPLE ecosystem with access key security"
authors = ["Finalverse Inc. <maple@finalverse.com>"]
license = "© 2025 Finalverse Inc. All rights reserved"
repository = "https://github.com/finalverse/mapleai.git"
homepage = "https://mapleai.org"

[dependencies]
maple-agents = { workspace = true }
maple-mrs = { path = "../mrs" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
warp = "0.3" # For REST API
uuid = { version = "1.0", features = ["v4"] }