[package]
name = "maple-api"
version = "0.1.0"
edition = "2021"
description = "Secure RESTful API for the MAPLE ecosystem"
authors = ["Finalverse Inc. <maple@finalverse.com>"]
repository = "https://github.com/finalverse/mapleai.git"
homepage = "https://mapleai.org"
license = "© 2025 Finalverse Inc. All rights reserved"

[dependencies]
maple-agents = { workspace = true }
maple-runtime = { path = "../runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
warp = "0.3" # For HTTP server
jsonwebtoken = "8.0" # For access key validation
tracing = "0.1" # For logging
tracing-subscriber = { workspace = true }
bytes = "1.10.1"