[package]
name = "maple-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for interacting with MAPLE"
authors = ["Finalverse Inc. <maple@finalverse.com>"]
repository = "https://github.com/finalverse/mapleai.git"
homepage = "https://mapleai.org"
license = "© 2025 Finalverse Inc. All rights reserved"

[dependencies]
maple-agents = { workspace = true }
maple-mrs = { path = "../mrs" }
maple-runtime = { path = "../runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }