[package]
name = "maple-core"
version = "0.1.0"
edition = "2021"
description = "Core governance and LLM/AGI integration for MAPLE"

[dependencies]
maple-llm = { path = "llm" }
maple-maple = { path = "maple" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }