[package]
name = "maple-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true }
# yamux = { workspace = true }
clap = { workspace = true }
libp2p = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
ual = { workspace = true }
map = { workspace = true }