[package]
name = "maple-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime environment for MAPLE nodes in distributed and enterprise modes"
authors = ["Finalverse Inc. <maple@finalverse.com>"]
repository = "https://github.com/finalverse/mapleai.git"
homepage = "https://mapleai.org"
license = "© 2025 Finalverse Inc. All rights reserved"

[dependencies]
maple-agents = { workspace = true }
maple-map = { workspace = true }
maple-mrs = { path = "../mrs" }
maple-ual = { workspace = true }
mapledb = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }