[package]
name = "sdk"
description = "MapleAI SDK for developers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true }
maple-ual = { workspace = true }
maple-agents = { workspace = true }
mapledb = { workspace = true }