[package]
name = "maple-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for interacting with the MAPLE ecosystem"
authors = ["Finalverse Inc. <maple@finalverse.com>"]
license = "© 2025 Finalverse Inc. All rights reserved"
repository = "https://github.com/finalverse/mapleai.git"
homepage = "https://mapleai.org"
publish = true  # Enable publishing to crates.io

[dependencies]
maple-agents = { workspace = true }
maple-ual = { workspace = true }
maple-map = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"] } # For API calls