[package]
name = "maple"
description = "Maple CLI for interacting with MAPLE ecosystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.14", features = ["codec"] }
futures = { workspace = true }