[package]
name = "maple-package"
description = "Maple package management for pre-defined business logic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ual = { workspace = true }