[package]
name = "mapledb"
description = "Maple AI ecosystem storage with persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# serde = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
sqlite = "0.36"  # Stable SQLite crate
thiserror = "1.0"
futures = "0.3.31"

tokio = { version = "1", features = ["sync"] }