[package]
name = "mapledb"
version = "0.1.0"
edition = "2021"
description = "MapleDB data layer for agent state and metadata"
authors = ["Finalverse Inc. <maple@finalverse.com>"]
repository = "https://github.com/finalverse/mapleai.git"
homepage = "https://mapleai.org"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
sled = "0.34" # Embedded key-value store