[package]
name = "maple-pg"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL backend for structured data storage"
authors = ["Finalverse Inc. <maple@finalverse.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/finalverse/mapleai.git"
homepage = "https://mapleai.org"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
serde_json = "1.0.140"